[package]
name = "spikenaut-reward"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Homeostatic reward computation for cyber-physical systems: EMA-smoothed mining efficiency dopamine, 7-system neuromodulators, thermal pain receptors, and Q8.8 FPGA export"
repository = "https://github.com/rmems/spikenaut-reward"
keywords = ["snn", "neuromorphic", "reward", "spikenaut", "mining"]
categories = ["science", "algorithms", "hardware-support"]
exclude = ["docs/"]

[lib]
name = "spikenaut_reward"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
